# Jawn-ai

./: .gitignore  Cargo.toml  README.MD
jawn/: instruction.md  jawn.toml
src/: error.rs  main.rs
src/ai_services/: mod.rs
src/ai_services/asst/: mod.rs  msg.rs
src/jawn/: config.rs  mod.rs
src/utils/: cli.rs  files.rs  mod.rs
