[package]
name = "Jawn-ai"
version = "0.1.0"
edition = "2021"
[lints.rust]
unsafe_code="forbid"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html:
[dependencies]
async-openai = "0.18.1"
console = "0.15.8"
derive_more = { version = "0.99.17", features = ["from", "display", "deref"] }
dialoguer = "0.11.0"
dotenv = "0.15.0"
globset = "0.4.14"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
textwrap = "0.16.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
walkdir = "2.4.0"
